Html files updated

--- a/Pages/Login.html
+++ b/Pages/Login.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html>  
-    <head>  
-        <body>  
-            <form>
-                <label for="username">Username:</label><br>
-                <input type="text" id="username" name="username"><br>
-                <label for="pwd">Password:</label><br>
-                <input type="password" id="pwd" name="pwd"><br>
-                <br>
-                <button type="login">Login</button>
-
-              </form>
-        </body>
-    </head>
+<head>
+  
+  <link rel="stylesheet" href="../Css/animation.css">
+  <link rel="stylesheet" href="../Css/style.css">
+  <title>Login</title>
+</head>
+<body>
+    <h1>Login</h1>
+  <form>
+    <label for="username" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Username:</label>
+    <input type="text" id="username" name="username">
+    <label for="pwd" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Password:</label>
+    <input type="password" id="pwd" name="pwd"><br>
+    
+    <button type="login">Login</button>
+  </form>
+</body>
 </html>
