--- a/Pages/Register.html
+++ b/Pages/Register.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
-<html>
-    <head>
 
-    </head>
-    <body>
-        <h1>
-            User Registration
-        </h1>
-        <br>
-        <form>
-<label for ="Username">Username:</label><br>
-<input type="text" id="Username" name="Username"><br>
-<label for="email">Email:</label><br>
-<input type="text" id="email" name="email"><br>
-<label for="Psw">Password:</label><br>
-<input type="password" id="pwd" name="pwd"><br>
-<label for="Psw-Repeat">Confirm Password:</label><br>
-<input type="password" id="pwd-repeat" name="pwd-repeat"><br>
-<br>
-<button type="submit">Register</button>
-
-
-
-
-        </form>
-    </body>
+<head>
+ 
+  <link rel="stylesheet" href="../Css/animation.css">
+  <link rel="stylesheet" href="../Css/style.css">
+  <title>User Registration</title>
+</head>
+<body>
+  <h1>User Registration</h1>
+  <br>
+  <form>
+    <label for="Username" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Username:</label>
+    <input type="text" id="Username" name="Username"><br>
+    <label for="email" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Email:</label>
+    <input type="text" id="email" name="email"><br>
+    <label for="pwd" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Password:</label>
+    <input type="password" id="pwd" name="pwd"><br>
+    <label for="pwd-repeat" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Confirm Password:</label>
+    <input type="password" id="pwd-repeat" name="pwd-repeat"><br>
+    
+    <button type="submit">Register</button>
+  </form>
+</body>
 </html>
