Reservation.html updated

--- a/Pages/Reservation.html
+++ b/Pages/Reservation.html
@@ -1,40 +1,13 @@
 <!DOCTYPE html>
-
 <head>
 
   <link rel="stylesheet" href="../Css/style.css">
   <link rel="stylesheet" href="../Css/animation.css">
-  <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
-
-    .res-table {
-      width: 80%; 
-      margin-top: 20px; 
-      border-collapse: collapse;
-    }
-
-    .res-table th, .res-table td {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: left;
-    }
-
-    .res-table th {
-      background-color: #f2f2f2;
-    }
-  </style>
 </head>
 <title>Room Reservation</title>
-<body>
+<body class="tbody">
   <h1>Room Reservation</h1>
-  <br>
+  
   <table class="res-table">
     <tr>
       <th>Room Number</th>
@@ -47,35 +20,35 @@
       <td>A-100</td>
       <td>2024-02-28</td>
       <td>9:00</td>
-      <td>11:00</td>
+      <td>11:40</td>
       <td>Research Meeting</td>
     </tr>
     <tr>
       <td>A-120</td>
       <td>2024-02-21</td>
       <td>9:10</td>
-      <td>12:00</td>
+      <td>12:50</td>
       <td>Thesis Presentation</td>
     </tr>
     <tr>
       <td>A-10</td>
       <td>2024-02-23</td>
       <td>8:00</td>
-      <td>10:00</td>
+      <td>10:30</td>
       <td>Study Group</td>
     </tr>
     <tr>
       <td>A-121</td>
       <td>2024-03-26</td>
       <td>14:45</td>
-      <td>21:00</td>
+      <td>21:15</td>
       <td>Journal Club</td>
     </tr>
     <tr>
       <td>A-80</td>
       <td>2024-03-21</td>
       <td>17:10</td>
-      <td>18:00</td>
+      <td>18:25</td>
       <td>Guest Lecture</td>
     </tr>
   </table>
